--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>SpaceX</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7UOPkIia68yq3BLE5zVTCZvH8M28-snSDFw&usqp=CAU"
+    />
   </head>
   <body>
     <app-root></app-root>
